WHY NOTHING WORKS: committed broken PoC

--- a/src/main/resources/assets/cmt/lang/en_us.json
+++ b/src/main/resources/assets/cmt/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-	"text.autoconfig.CustomMapsTools.title": "Custom Maps Tools"
+	"text.autoconfig.CustomMapsTools.title": "Custom Maps Tools",
+	"cmt.gui.hotreloadeablectrls.title": "Custom Controls"
 }
