--- a/src/main/resources/assets/cmt/lang/en_us.json
+++ b/src/main/resources/assets/cmt/lang/en_us.json
@@ -1,4 +1,6 @@
 {
 	"text.autoconfig.CustomMapsTools.title": "Custom Maps Tools",
-	"cmt.gui.hotreloadeablectrls.title": "Custom Controls"
+	"cmt.gui.hotreloadeablectrls.title": "Custom Controls",
+	"category.custom.title": "Dynamic Keybinds",
+	"text.invalid.translation": "An invalid translation"
 }
