new item, Zone Creator, for who doesn't like commands
Signed-off-by: ENDERZOMBI102 <enderzombi102.end@gmail.com>

--- a/src/main/resources/assets/cmt/lang/en_us.json
+++ b/src/main/resources/assets/cmt/lang/en_us.json
@@ -1,5 +1,7 @@
 {
+	"itemGroup.cmt.item_group": "Custom Maps Tools",
 	"text.autoconfig.CustomMapsTools.title": "Custom Maps Tools",
 	"block.cmt.inv_light": "Invisible Light",
-	"block.cmt.screen_block": "Screen Block"
+	"block.cmt.screen_block": "Screen Block",
+	"item.cmt.zone_creator": "Zone Creator"
 }
