--- a/src/main/resources/assets/cmt/lang/en_us.json
+++ b/src/main/resources/assets/cmt/lang/en_us.json
@@ -2,6 +2,6 @@
 	"itemGroup.cmt.item_group": "Custom Maps Tools",
 	"text.autoconfig.CustomMapsTools.title": "Custom Maps Tools",
 	"block.cmt.inv_light": "Invisible Light",
-	"block.cmt.screen_block": "Screen Block",
+	"block.cmt.display_block": "Display Block",
 	"item.cmt.zone_creator": "Zone Creator"
 }
